tests/negative/foreach_loop_var_assign.far
fun main() -> i64 {
  xs: List<i64> = List<i64>()
  xs.push(1)
  for x in xs {
    x = 99
  }
  return 0
}
